--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ body {
   border: 2px solid #3F0C1F;
 }
 
-#menu-tile, #specials-tile, #map-tile {
+#menu-tile, #specials-tile {
   height: 250px;
   width: 100%;
   margin-bottom: 15px;
@@ -128,7 +128,7 @@ body {
   border: 2px solid #3F0C1F;
   overflow: hidden;
 }
-#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+#menu-tile:hover, #specials-tile:hover{
   box-shadow: 0 1px 5px 1px #cccccc;
 }
 #menu-tile {
