--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ body {
   background: url('../images/specials-tile.jpg') no-repeat;
   background-position: center;
 }
-#menu-tile span, #specials-tile span, #map-tile span {
+#menu-tile span, #specials-tile span {
   position: absolute;
   bottom: 0;
   right: 0;
