--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@ body {
 
 #logo-img {
   background: url('../images/restaurant-logo_large.png') no-repeat;
-  width: 180px;
-  height: 180px;
+  width: 150px;
+  height: 150px;
   margin: 10px 15px 10px 0;
 }
 
@@ -25,22 +25,22 @@ body {
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
   color: #557c3e;
-  font-size: 2.2em;
+  font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
   text-shadow: 1px 1px 1px #222;
   margin-top: 0;
   margin-bottom: 0;
-  line-height: 2.75;
+  line-height: .75;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
-.navbar-brand p { 
+.navbar-brand p { /* Kosher cert */
   color: #000;
   text-transform: uppercase;
-  font-size: 1.4em;
-  margin-top: 2px;
+  font-size: .7em;
+  margin-top: 15px;
 }
 .navbar-brand p span { /* Star-K */
   vertical-align: middle;
@@ -120,7 +120,7 @@ body {
   border: 2px solid #3F0C1F;
 }
 
-#menu-tile, #specials-tile {
+#menu-tile, #specials-tile, #map-tile {
   height: 250px;
   width: 100%;
   margin-bottom: 15px;
@@ -128,7 +128,7 @@ body {
   border: 2px solid #3F0C1F;
   overflow: hidden;
 }
-#menu-tile:hover, #specials-tile:hover {
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
   box-shadow: 0 1px 5px 1px #cccccc;
 }
 #menu-tile {
@@ -139,7 +139,7 @@ body {
   background: url('../images/specials-tile.jpg') no-repeat;
   background-position: center;
 }
-#menu-tile span, #specials-tile span {
+#menu-tile span, #specials-tile span, #map-tile span {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -242,9 +242,9 @@ h3.menu-item-title {
 @media (min-width: 992px) and (max-width: 1199px) {
   /* Header */
   #logo-img {
-    background: url('../images/restaurant-logo_large.png') no-repeat;
-    width: 300px;
-    height: 300px;
+    background: url('../images/restaurant-logo_medium.png') no-repeat;
+    width: 100px;
+    height: 100px;
     margin: 5px 5px 5px 0;
   }
   /* End Header */
@@ -262,7 +262,7 @@ h3.menu-item-title {
   /* Home Page */
   .container .jumbotron {
     background: url('../images/jumbotron_768.jpg') no-repeat;
-    height: 532px;
+    height: 432px;
   }
   /* End Home Page */
 }
@@ -272,13 +272,13 @@ h3.menu-item-title {
   /* Header */
   .navbar-brand {
     padding-top: 10px;
-    height: 180px;
+    height: 80px;
   }
   .navbar-brand h1 { /* Restaurant name */
     padding-top: 10px;
-    font-size: 6vw; /* 1vw = 1% of viewport width */
+    font-size: 5vw; /* 1vw = 1% of viewport width */
   }
-  .navbar-brand p { 
+  .navbar-brand p { /* Kosher cert */
     font-size: .6em;
     margin-top: 12px;
   }
